--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku": "^7.46.0",
+    "pg": "^8.4.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
